--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -1,1 +1,135 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pygame\n",
+    "import random\n",
+    "import sys\n",
+    "\n",
+    "# Initialize Pygame\n",
+    "pygame.init()\n",
+    "\n",
+    "# Set up display\n",
+    "width, height = 840, 600\n",
+    "screen = pygame.display.set_mode((width, height))\n",
+    "pygame.display.set_caption(\"El Examen\")\n",
+    "\n",
+    "# Colors\n",
+    "white = (255, 255, 255)\n",
+    "black = (0, 0, 0)\n",
+    "\n",
+    "#Font\n",
+    "font = pygame.font.Font(None,32)\n",
+    "font_2 = pygame.font.Font(None,25)\n",
+    "\n",
+    "#Buttons\n",
+    "button_width, button_height = 120, 50\n",
+    "\n",
+    "button_color = black\n",
+    "button_math = pygame.Rect(120, 50, button_width, button_height)\n",
+    "button_chem = pygame.Rect(360, 50, button_width, button_height)\n",
+    "button_eng = pygame.Rect(600, 50, button_width, button_height)\n",
+    "\n",
+    "# Create a clock object to control the frame rate\n",
+    "clock = pygame.time.Clock()\n",
+    "fps = 60  # Set the desired frames per second\n",
+    "\n",
+    "running = True\n",
+    "\n",
+    "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
+    "        hover = button.collidepoint(mouse_x, mouse_y)\n",
+    "\n",
+    "        if hover and button.height < 345:\n",
+    "            button.height += 5\n",
+    "        elif not hover and button.height > 50:\n",
+    "            button.height -= 5\n",
+    "        \n",
+    "        button = pygame.Rect(button.x, button.y, button.width, button.height)\n",
+    "        pygame.draw.rect(screen, black, button,0, 30)\n",
+    "\n",
+    "        text = font.render(name, True, white)\n",
+    "        text_button = text.get_rect(center=(button.centerx, button.y+25))\n",
+    "        screen.blit(text, text_button)\n",
+    "\n",
+    "        if button.height > 110:\n",
+    "            subbutton_1 = pygame.Rect(button.x+10,button.y+60,button_width-20, button_height)\n",
+    "            pygame.draw.rect(screen, white, subbutton_1,0, 30)\n",
+    "            text_1 = font_2.render(subname_1, True, black)\n",
+    "            text_subbutton_1 = text_1.get_rect(center=subbutton_1.center)\n",
+    "            screen.blit(text_1, text_subbutton_1)\n",
+    "\n",
+    "        if button.height > 210:\n",
+    "            subbutton_2 = pygame.Rect(button.x+10,button.y+160,button_width-20, button_height)\n",
+    "            pygame.draw.rect(screen, white, subbutton_2,0, 30)\n",
+    "            text_2 = font_2.render(subname_2, True, black)\n",
+    "            text_subbutton_2 = text_2.get_rect(center=subbutton_2.center)\n",
+    "            screen.blit(text_2, text_subbutton_2)\n",
+    "\n",
+    "        if button.height > 310:\n",
+    "            subbutton_3 = pygame.Rect(button.x+10,button.y+260,button_width-20, button_height)\n",
+    "            pygame.draw.rect(screen, white, subbutton_3,0, 30)\n",
+    "            text_3 = font_2.render(subname_3, True, black)\n",
+    "            text_subbutton_3 = text_3.get_rect(center=subbutton_3.center)\n",
+    "            screen.blit(text_3, text_subbutton_3)\n",
+    "\n",
+    "while running:\n",
+    "    screen.fill(white)\n",
+    "\n",
+    "    for event in pygame.event.get():\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            running = False\n",
+    "\n",
+    "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
+    "\n",
+    "    button_dynamics(button_math, 'Math','Game 1','Game 2','Game 3')\n",
+    "    button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
+    "    button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
+    "\n",
+    "# Update the display\n",
+    "    pygame.display.flip()\n",
+    "\n",
+    "    # Cap the frame rate to 60 fps\n",
+    "    clock.tick(fps)\n",
+    "\n",
+    "# Quit Pygame\n",
+    "pygame.quit()\n",
+    "sys.exit()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
