--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,16 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'b' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 122\u001b[0m\n\u001b[0;32m    120\u001b[0m     Math_Game_Dos()\n\u001b[0;32m    121\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m Math_Game_3:\n\u001b[1;32m--> 122\u001b[0m     Math_Game_Tres()\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m Eng_Game_1:\n\u001b[0;32m    124\u001b[0m     Eng_Game_Dos()\n",
+      "Cell \u001b[1;32mIn[46], line 91\u001b[0m, in \u001b[0;36mMath_Game_Tres\u001b[1;34m()\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mMath_Game_Tres\u001b[39m():\n\u001b[1;32m---> 91\u001b[0m     b\u001b[38;5;241m=\u001b[39mb\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'b' where it is not associated with a value"
+     ]
+    },
+    {
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -40,15 +143,18 @@
     "button_width, button_height = 120, 50\n",
     "\n",
     "button_color = black\n",
-    "button_math = pygame.Rect(120, 50, button_width, button_height)\n",
-    "button_chem = pygame.Rect(360, 50, button_width, button_height)\n",
-    "button_eng = pygame.Rect(600, 50, button_width, button_height)\n",
+    "button_math = pygame.Rect(120, 150, button_width, button_height)\n",
+    "button_chem = pygame.Rect(360, 150, button_width, button_height)\n",
+    "button_eng = pygame.Rect(600, 150, button_width, button_height)\n",
     "\n",
     "# Create a clock object to control the frame rate\n",
     "clock = pygame.time.Clock()\n",
     "fps = 60  # Set the desired frames per second\n",
     "\n",
     "running = True\n",
+    "Math_Game_1 = Math_Game_2 = Math_Game_3 = Eng_Game_1 = Eng_Game_2 = Eng_Game_3 = Chem_Game_1 = Chem_Game_2 = Chem_Game_3 = False\n",
+    "\n",
+    "i=0\n",
     "\n",
     "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
@@ -64,6 +170,8 @@
     "        text = font.render(name, True, white)\n",
     "        text_button = text.get_rect(center=(button.centerx, button.y+25))\n",
     "        screen.blit(text, text_button)\n",
+    "\n",
+    "        subbutton_1 = subbutton_2 = subbutton_3 = None\n",
     "\n",
     "        if button.height > 110:\n",
     "            subbutton_1 = pygame.Rect(button.x+10,button.y+60,button_width-20, button_height)\n",
@@ -85,19 +193,116 @@
     "            text_3 = font_2.render(subname_3, True, black)\n",
     "            text_subbutton_3 = text_3.get_rect(center=subbutton_3.center)\n",
     "            screen.blit(text_3, text_subbutton_3)\n",
+    "        \n",
+    "        return subbutton_1, subbutton_2, subbutton_3\n",
+    "\n",
+    "def Math_Game_Uno():\n",
+    "    global i, Math_Game_1\n",
+    "    button_1 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_1,0, 30)\n",
+    "    text_math = font_2.render(str(i), True, white)\n",
+    "    text_math_1 = text_math.get_rect(center=button_1.center)\n",
+    "    screen.blit(text_math, text_math_1)\n",
+    "    if i < 500:\n",
+    "        i += 1\n",
+    "\n",
+    "def Math_Game_Dos():\n",
+    "    button_2 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_2,0, 30)\n",
+    "    text_math_2 = font_2.render(\"Math Game 2\", True, white)\n",
+    "    text_math_1_2 = text_math_2.get_rect(center=button_2.center)\n",
+    "    screen.blit(text_math_2, text_math_1_2)\n",
+    "\n",
+    "def Math_Game_Tres():\n",
+    "    button_3 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_3,0, 30)\n",
+    "    text_math_3 = font_2.render(\"Math Game 3\", True, white)\n",
+    "    text_math_1_3 = text_math_3.get_rect(center=button_3.center)\n",
+    "    screen.blit(text_math_3, text_math_1_3)\n",
+    "\n",
+    "def Eng_Game_Uno():  \n",
+    "    button_4 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_4,0, 30)\n",
+    "    text_eng_1 = font_2.render(\"English Game 1\", True, white)\n",
+    "    text_eng_1_1 = text_eng_1.get_rect(center=button_4.center)\n",
+    "    screen.blit(text_eng_1, text_eng_1_1)\n",
+    "\n",
+    "def Eng_Game_Dos(): \n",
+    "    d=d\n",
+    "\n",
+    "def Eng_Game_Tres(): \n",
+    "    e=e\n",
+    "\n",
+    "def Chem_Game_Uno(): \n",
+    "    f=f \n",
+    "\n",
+    "def Chem_Game_Dos(): \n",
+    "    g=g\n",
+    "\n",
+    "def Chem_Game_Tres(): \n",
+    "    h=h\n",
+    "\n",
     "\n",
     "while running:\n",
     "    screen.fill(white)\n",
     "\n",
+    "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
+    "\n",
+    "    home_button = pygame.Rect(20,20,50,50)\n",
+    "    pygame.draw.rect(screen, black, home_button,0, 15)\n",
+    "    home_text = font.render(\"[]\", True, white)\n",
+    "    home_text_1 = home_text.get_rect(center=home_button.center)\n",
+    "    screen.blit(home_text, home_text_1)\n",
+    "\n",
+    "    if Math_Game_1:\n",
+    "        Math_Game_Uno()\n",
+    "    elif Math_Game_2:\n",
+    "        Math_Game_Dos()\n",
+    "    elif Math_Game_3:\n",
+    "        Math_Game_Tres()\n",
+    "    elif Eng_Game_1:\n",
+    "        Eng_Game_Dos()\n",
+    "    elif Eng_Game_2:\n",
+    "        Eng_Game_Dos()\n",
+    "    elif Eng_Game_3:\n",
+    "        Eng_Game_Tres()\n",
+    "    elif Chem_Game_1:\n",
+    "        Eng_Game_Dos()\n",
+    "    elif Chem_Game_2:\n",
+    "        Eng_Game_Dos()\n",
+    "    elif Chem_Game_3:\n",
+    "        Eng_Game_Tres()\n",
+    "    else:\n",
+    "        subbutton_math_1, subbutton_math_2, subbutton_math_3 = button_dynamics(button_math, 'Math','Game 1','Game 2','Game 3')\n",
+    "        subbutton_eng_1, subbutton_eng_2, subbutton_eng_3 = button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
+    "        subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
+    "    \n",
     "    for event in pygame.event.get():\n",
     "        if event.type == pygame.QUIT:\n",
     "            running = False\n",
-    "\n",
-    "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
-    "\n",
-    "    button_dynamics(button_math, 'Math','Game 1','Game 2','Game 3')\n",
-    "    button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
-    "    button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
+    "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                if home_button.collidepoint(mouse_x, mouse_y):\n",
+    "                    Math_Game_1 = Math_Game_2 = Math_Game_3 = Eng_Game_1 = Eng_Game_2 = Eng_Game_3 = Chem_Game_1 = Chem_Game_2 = Chem_Game_3 = False  \n",
+    "                if subbutton_math_1 and subbutton_math_1.collidepoint(mouse_x, mouse_y):\n",
+    "                    Math_Game_1 = True\n",
+    "                if subbutton_math_2 and subbutton_math_2.collidepoint(mouse_x, mouse_y):\n",
+    "                    Math_Game_2 = True\n",
+    "                if subbutton_math_3 and subbutton_math_3.collidepoint(mouse_x, mouse_y):\n",
+    "                    Math_Game_3 = True\n",
+    "                if subbutton_eng_1 and subbutton_eng_1.collidepoint(mouse_x, mouse_y):\n",
+    "                    Eng_Game_1 = True\n",
+    "                if subbutton_eng_2 and subbutton_eng_2.collidepoint(mouse_x, mouse_y):\n",
+    "                    Eng_Game_2 = True\n",
+    "                if subbutton_eng_3 and subbutton_eng_3.collidepoint(mouse_x, mouse_y):\n",
+    "                    Eng_Game_3 = True\n",
+    "                if subbutton_chem_1 and subbutton_chem_1.collidepoint(mouse_x, mouse_y):\n",
+    "                    Chem_Game_1 = True\n",
+    "                if subbutton_chem_2 and subbutton_chem_2.collidepoint(mouse_x, mouse_y):\n",
+    "                    Chem_Game_2 = True\n",
+    "                if subbutton_chem_3 and subbutton_chem_3.collidepoint(mouse_x, mouse_y):\n",
+    "                    Chem_Game_3 = True\n",
+    "                \n",
+    "    \n",
     "\n",
     "# Update the display\n",
     "    pygame.display.flip()\n",
