--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,119 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n"
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.4)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'b' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 122\u001b[0m\n\u001b[0;32m    120\u001b[0m     Math_Game_Dos()\n\u001b[0;32m    121\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m Math_Game_3:\n\u001b[1;32m--> 122\u001b[0m     Math_Game_Tres()\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m Eng_Game_1:\n\u001b[0;32m    124\u001b[0m     Eng_Game_Dos()\n",
-      "Cell \u001b[1;32mIn[46], line 91\u001b[0m, in \u001b[0;36mMath_Game_Tres\u001b[1;34m()\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mMath_Game_Tres\u001b[39m():\n\u001b[1;32m---> 91\u001b[0m     b\u001b[38;5;241m=\u001b[39mb\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'b' where it is not associated with a value"
-     ]
-    },
-    {
-     "ename": "",
+     "ename": "SystemExit",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\anton\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -203,8 +116,7 @@
     "    text_math = font_2.render(str(i), True, white)\n",
     "    text_math_1 = text_math.get_rect(center=button_1.center)\n",
     "    screen.blit(text_math, text_math_1)\n",
-    "    if i < 500:\n",
-    "        i += 1\n",
+    "    i += 1\n",
     "\n",
     "def Math_Game_Dos():\n",
     "    button_2 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
@@ -228,19 +140,39 @@
     "    screen.blit(text_eng_1, text_eng_1_1)\n",
     "\n",
     "def Eng_Game_Dos(): \n",
-    "    d=d\n",
+    "    button_5 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_5,0, 30)\n",
+    "    text_eng_2 = font_2.render(\"English Game 2\", True, white)\n",
+    "    text_eng_1_2 = text_eng_2.get_rect(center=button_5.center)\n",
+    "    screen.blit(text_eng_2, text_eng_1_2)\n",
     "\n",
     "def Eng_Game_Tres(): \n",
-    "    e=e\n",
+    "    button_6 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_6,0, 30)\n",
+    "    text_eng_3 = font_2.render(\"English Game 3\", True, white)\n",
+    "    text_eng_1_3 = text_eng_3.get_rect(center=button_6.center)\n",
+    "    screen.blit(text_eng_3, text_eng_1_3)\n",
     "\n",
     "def Chem_Game_Uno(): \n",
-    "    f=f \n",
+    "    button_7 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_7,0, 30)\n",
+    "    text_chem_1 = font_2.render(\"Chemistry Game 1\", True, white)\n",
+    "    text_chem_1_1 = text_chem_1.get_rect(center=button_7.center)\n",
+    "    screen.blit(text_chem_1, text_chem_1_1) \n",
     "\n",
     "def Chem_Game_Dos(): \n",
-    "    g=g\n",
+    "    button_8 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_8,0, 30)\n",
+    "    text_chem_2 = font_2.render(\"Chemistry Game 2\", True, white)\n",
+    "    text_chem_1_2 = text_chem_2.get_rect(center=button_8.center)\n",
+    "    screen.blit(text_chem_2, text_chem_1_2) \n",
     "\n",
     "def Chem_Game_Tres(): \n",
-    "    h=h\n",
+    "    button_9 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "    pygame.draw.rect(screen, black, button_9,0, 30)\n",
+    "    text_chem_3 = font_2.render(\"Chemistry Game 3\", True, white)\n",
+    "    text_chem_1_3 = text_chem_3.get_rect(center=button_9.center)\n",
+    "    screen.blit(text_chem_3, text_chem_1_3) \n",
     "\n",
     "\n",
     "while running:\n",
@@ -261,13 +193,13 @@
     "    elif Math_Game_3:\n",
     "        Math_Game_Tres()\n",
     "    elif Eng_Game_1:\n",
-    "        Eng_Game_Dos()\n",
+    "        Eng_Game_Uno()\n",
     "    elif Eng_Game_2:\n",
     "        Eng_Game_Dos()\n",
     "    elif Eng_Game_3:\n",
     "        Eng_Game_Tres()\n",
     "    elif Chem_Game_1:\n",
-    "        Eng_Game_Dos()\n",
+    "        Eng_Game_Uno()\n",
     "    elif Chem_Game_2:\n",
     "        Eng_Game_Dos()\n",
     "    elif Chem_Game_3:\n",
