--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.4)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -40,12 +32,15 @@
     "pygame.init()\n",
     "\n",
     "# Set up display\n",
-    "width, height = 840, 600\n",
-    "screen = pygame.display.set_mode((width, height))\n",
+    "screen = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
     "pygame.display.set_caption(\"El Examen\")\n",
+    "\n",
+    "info = pygame.display.Info()\n",
+    "width, height = info.current_w, info.current_h\n",
     "\n",
     "# Colors\n",
     "white = (255, 255, 255)\n",
+    "gray = (211, 211, 211)\n",
     "black = (0, 0, 0)\n",
     "\n",
     "#Font\n",
@@ -53,12 +48,17 @@
     "font_2 = pygame.font.Font(None,25)\n",
     "\n",
     "#Buttons\n",
-    "button_width, button_height = 120, 50\n",
+    "button_width, button_height = int(width/7), 50\n",
     "\n",
     "button_color = black\n",
-    "button_math = pygame.Rect(120, 150, button_width, button_height)\n",
-    "button_chem = pygame.Rect(360, 150, button_width, button_height)\n",
-    "button_eng = pygame.Rect(600, 150, button_width, button_height)\n",
+    "button_math = pygame.Rect(int(width/7), 150, button_width, button_height)\n",
+    "button_chem = pygame.Rect(3*int(width/7), 150, button_width, button_height)\n",
+    "button_eng = pygame.Rect(5*int(width/7), 150, button_width, button_height)\n",
+    "\n",
+    "\n",
+    "dropdown = pygame.Rect(-10,-20, width/4, height/20) \n",
+    "home_button = pygame.Rect(50,-30,30,30)\n",
+    "close_button = pygame.Rect(10,-30,30,30)\n",
     "\n",
     "# Create a clock object to control the frame rate\n",
     "clock = pygame.time.Clock()\n",
@@ -68,14 +68,45 @@
     "Math_Game_1 = Math_Game_2 = Math_Game_3 = Eng_Game_1 = Eng_Game_2 = Eng_Game_3 = Chem_Game_1 = Chem_Game_2 = Chem_Game_3 = False\n",
     "\n",
     "i=0\n",
+    "def dropdown_dynamics(dropdown, home_button, close_button):\n",
+    "    global running\n",
+    "    hover = dropdown.collidepoint(mouse_x, mouse_y)\n",
+    "    if hover and dropdown.height < 80 and home_button.y < 10:\n",
+    "        dropdown.height += 5\n",
+    "        home_button.y += 5\n",
+    "        close_button.y += 5\n",
+    "    elif not hover and dropdown.height > 40 and home_button.y >-30:\n",
+    "        dropdown.height -= 5\n",
+    "        home_button.y -= 5\n",
+    "        close_button.y -= 5\n",
+    "\n",
+    "    dropdown = pygame.Rect(-10,-20, 200, dropdown.height) \n",
+    "    pygame.draw.rect(screen, gray, dropdown, 0, 20)\n",
+    "\n",
+    "    home_button = pygame.Rect(50, home_button.y,30,30)\n",
+    "    pygame.draw.rect(screen, black, home_button,0, 15)\n",
+    "    home_text = font.render(\"[]\", True, white)\n",
+    "    home_text_1 = home_text.get_rect(center=home_button.center)\n",
+    "    screen.blit(home_text, home_text_1)\n",
+    "\n",
+    "    close_button = pygame.Rect(10, close_button.y,30,30)\n",
+    "    pygame.draw.rect(screen, black, close_button,0, 15)\n",
+    "    close_text = font.render(\"X\", True, white)\n",
+    "    close_text_1 = close_text.get_rect(center=close_button.center)\n",
+    "    screen.blit(close_text, close_text_1)\n",
+    "\n",
+    "    if close_button.collidepoint(mouse_x,mouse_y):\n",
+    "        running = False\n",
+    "    if home_button.collidepoint(mouse_x, mouse_y):\n",
+    "        return\n",
     "\n",
     "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
     "\n",
-    "        if hover and button.height < 345:\n",
-    "            button.height += 5\n",
+    "        if hover and button.height < 350:\n",
+    "            button.height += 10\n",
     "        elif not hover and button.height > 50:\n",
-    "            button.height -= 5\n",
+    "            button.height -= 15\n",
     "        \n",
     "        button = pygame.Rect(button.x, button.y, button.width, button.height)\n",
     "        pygame.draw.rect(screen, black, button,0, 30)\n",
@@ -180,11 +211,7 @@
     "\n",
     "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "\n",
-    "    home_button = pygame.Rect(20,20,50,50)\n",
-    "    pygame.draw.rect(screen, black, home_button,0, 15)\n",
-    "    home_text = font.render(\"[]\", True, white)\n",
-    "    home_text_1 = home_text.get_rect(center=home_button.center)\n",
-    "    screen.blit(home_text, home_text_1)\n",
+    "    dropdown_dynamics(dropdown, home_button, close_button)\n",
     "\n",
     "    if Math_Game_1:\n",
     "        Math_Game_Uno()\n",
@@ -210,9 +237,9 @@
     "        subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
     "    \n",
     "    for event in pygame.event.get():\n",
-    "        if event.type == pygame.QUIT:\n",
-    "            running = False\n",
     "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                if close_button.collidepoint(mouse_x,mouse_y):\n",
+    "                    running = False\n",
     "                if home_button.collidepoint(mouse_x, mouse_y):\n",
     "                    Math_Game_1 = Math_Game_2 = Math_Game_3 = Eng_Game_1 = Eng_Game_2 = Eng_Game_3 = Chem_Game_1 = Chem_Game_2 = Chem_Game_3 = False  \n",
     "                if subbutton_math_1 and subbutton_math_1.collidepoint(mouse_x, mouse_y):\n",
