--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -6,6 +6,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
      "ename": "SystemExit",
      "evalue": "",
      "output_type": "error",
@@ -18,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\anton\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
@@ -65,39 +73,35 @@
     "fps = 60  # Set the desired frames per second\n",
     "\n",
     "running = True\n",
-    "Math_Game_1 = Math_Game_2 = Math_Game_3 = Eng_Game_1 = Eng_Game_2 = Eng_Game_3 = Chem_Game_1 = Chem_Game_2 = Chem_Game_3 = False\n",
-    "\n",
-    "i=0\n",
-    "def dropdown_dynamics(dropdown, home_button, close_button):\n",
-    "    global running\n",
+    "def dropdown_dynamics(root, dropdown, home_button, close_button):\n",
     "    hover = dropdown.collidepoint(mouse_x, mouse_y)\n",
     "    if hover and dropdown.height < 80 and home_button.y < 10:\n",
     "        dropdown.height += 5\n",
     "        home_button.y += 5\n",
-    "        close_button.y += 5\n",
+    "        close_button.y += 5 \n",
     "    elif not hover and dropdown.height > 40 and home_button.y >-30:\n",
     "        dropdown.height -= 5\n",
     "        home_button.y -= 5\n",
     "        close_button.y -= 5\n",
     "\n",
     "    dropdown = pygame.Rect(-10,-20, 200, dropdown.height) \n",
-    "    pygame.draw.rect(screen, gray, dropdown, 0, 20)\n",
+    "    pygame.draw.rect(root, gray, dropdown, 0, 20)\n",
     "\n",
     "    home_button = pygame.Rect(50, home_button.y,30,30)\n",
-    "    pygame.draw.rect(screen, black, home_button,0, 15)\n",
+    "    pygame.draw.rect(root, black, home_button,0, 15)\n",
     "    home_text = font.render(\"[]\", True, white)\n",
     "    home_text_1 = home_text.get_rect(center=home_button.center)\n",
-    "    screen.blit(home_text, home_text_1)\n",
+    "    root.blit(home_text, home_text_1)\n",
     "\n",
     "    close_button = pygame.Rect(10, close_button.y,30,30)\n",
-    "    pygame.draw.rect(screen, black, close_button,0, 15)\n",
+    "    pygame.draw.rect(root, black, close_button,0, 15)\n",
     "    close_text = font.render(\"X\", True, white)\n",
     "    close_text_1 = close_text.get_rect(center=close_button.center)\n",
-    "    screen.blit(close_text, close_text_1)\n",
+    "    root.blit(close_text, close_text_1)\n",
     "\n",
-    "    if close_button.collidepoint(mouse_x,mouse_y):\n",
+    "    if close_button.collidepoint(mouse_x,mouse_y) and event.type == pygame.KEYDOWN:\n",
     "        running = False\n",
-    "    if home_button.collidepoint(mouse_x, mouse_y):\n",
+    "    if home_button.collidepoint(mouse_x, mouse_y) and event.type == pygame.KEYDOWN:\n",
     "        return\n",
     "\n",
     "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
@@ -141,13 +145,22 @@
     "        return subbutton_1, subbutton_2, subbutton_3\n",
     "\n",
     "def Math_Game_Uno():\n",
-    "    global i, Math_Game_1\n",
-    "    button_1 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
-    "    pygame.draw.rect(screen, black, button_1,0, 30)\n",
-    "    text_math = font_2.render(str(i), True, white)\n",
-    "    text_math_1 = text_math.get_rect(center=button_1.center)\n",
-    "    screen.blit(text_math, text_math_1)\n",
-    "    i += 1\n",
+    "    math_game_uno = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
+    "    pygame.display.set_caption('Math uno')\n",
+    "    \n",
+    "    while True:\n",
+    "        math_game_uno.fill(white)\n",
+    "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
+    "        for event in pygame.event.get():\n",
+    "            \n",
+    "            if event.type == pygame.QUIT:\n",
+    "                pygame.quit()\n",
+    "                sys.exit()\n",
+    "            elif event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
+    "                return\n",
+    "\n",
+    "        \n",
+    "        pygame.display.update()\n",
     "\n",
     "def Math_Game_Dos():\n",
     "    button_2 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
@@ -211,55 +224,34 @@
     "\n",
     "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "\n",
-    "    dropdown_dynamics(dropdown, home_button, close_button)\n",
+    "    dropdown_dynamics(screen, dropdown, home_button, close_button)\n",
     "\n",
-    "    if Math_Game_1:\n",
-    "        Math_Game_Uno()\n",
-    "    elif Math_Game_2:\n",
-    "        Math_Game_Dos()\n",
-    "    elif Math_Game_3:\n",
-    "        Math_Game_Tres()\n",
-    "    elif Eng_Game_1:\n",
-    "        Eng_Game_Uno()\n",
-    "    elif Eng_Game_2:\n",
-    "        Eng_Game_Dos()\n",
-    "    elif Eng_Game_3:\n",
-    "        Eng_Game_Tres()\n",
-    "    elif Chem_Game_1:\n",
-    "        Eng_Game_Uno()\n",
-    "    elif Chem_Game_2:\n",
-    "        Eng_Game_Dos()\n",
-    "    elif Chem_Game_3:\n",
-    "        Eng_Game_Tres()\n",
-    "    else:\n",
-    "        subbutton_math_1, subbutton_math_2, subbutton_math_3 = button_dynamics(button_math, 'Math','Game 1','Game 2','Game 3')\n",
-    "        subbutton_eng_1, subbutton_eng_2, subbutton_eng_3 = button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
-    "        subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
+    "    subbutton_math_1, subbutton_math_2, subbutton_math_3 = button_dynamics(button_math, 'Math','Game 1','Game 2','Game 3')\n",
+    "    subbutton_eng_1, subbutton_eng_2, subbutton_eng_3 = button_dynamics(button_chem, 'Chemistry','Game 1','Game 2','Game 3')\n",
+    "    subbutton_chem_1, subbutton_chem_2, subbutton_chem_3 = button_dynamics(button_eng,'English','Game 1','Game 2','Game 3')\n",
     "    \n",
     "    for event in pygame.event.get():\n",
     "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
     "                if close_button.collidepoint(mouse_x,mouse_y):\n",
     "                    running = False\n",
-    "                if home_button.collidepoint(mouse_x, mouse_y):\n",
-    "                    Math_Game_1 = Math_Game_2 = Math_Game_3 = Eng_Game_1 = Eng_Game_2 = Eng_Game_3 = Chem_Game_1 = Chem_Game_2 = Chem_Game_3 = False  \n",
     "                if subbutton_math_1 and subbutton_math_1.collidepoint(mouse_x, mouse_y):\n",
-    "                    Math_Game_1 = True\n",
+    "                    Math_Game_Uno()\n",
     "                if subbutton_math_2 and subbutton_math_2.collidepoint(mouse_x, mouse_y):\n",
-    "                    Math_Game_2 = True\n",
+    "                    Math_Game_Dos()\n",
     "                if subbutton_math_3 and subbutton_math_3.collidepoint(mouse_x, mouse_y):\n",
-    "                    Math_Game_3 = True\n",
+    "                    Math_Game_Tres()\n",
     "                if subbutton_eng_1 and subbutton_eng_1.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_1 = True\n",
+    "                    Eng_Game_Uno()\n",
     "                if subbutton_eng_2 and subbutton_eng_2.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_2 = True\n",
+    "                    Eng_Game_Dos()\n",
     "                if subbutton_eng_3 and subbutton_eng_3.collidepoint(mouse_x, mouse_y):\n",
-    "                    Eng_Game_3 = True\n",
+    "                    Eng_Game_Tres()\n",
     "                if subbutton_chem_1 and subbutton_chem_1.collidepoint(mouse_x, mouse_y):\n",
-    "                    Chem_Game_1 = True\n",
+    "                    Chem_Game_Uno()\n",
     "                if subbutton_chem_2 and subbutton_chem_2.collidepoint(mouse_x, mouse_y):\n",
-    "                    Chem_Game_2 = True\n",
+    "                    Chem_Game_Dos()\n",
     "                if subbutton_chem_3 and subbutton_chem_3.collidepoint(mouse_x, mouse_y):\n",
-    "                    Chem_Game_3 = True\n",
+    "                    Chem_Game_Tres()\n",
     "                \n",
     "    \n",
     "\n",
@@ -272,6 +264,62 @@
     "# Quit Pygame\n",
     "pygame.quit()\n",
     "sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "import sys\n",
+    "\n",
+    "# Initialize Pygame\n",
+    "pygame.init()\n",
+    "\n",
+    "# Constants\n",
+    "WINDOW_SIZE = (400, 300)\n",
+    "WHITE = (255, 255, 255)\n",
+    "BLUE = (0, 0, 255)\n",
+    "\n",
+    "# Set up the main window\n",
+    "main_window = pygame.display.set_mode(WINDOW_SIZE)\n",
+    "pygame.display.set_caption('Main Window')\n",
+    "\n",
+    "# Button properties\n",
+    "button_rect = pygame.Rect(150, 100, 100, 50)\n",
+    "\n",
+    "def open_new_window():\n",
+    "    new_window = pygame.display.set_mode(WINDOW_SIZE)\n",
+    "    pygame.display.set_caption('New Window')\n",
+    "\n",
+    "    while True:\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                pygame.quit()\n",
+    "                sys.exit()\n",
+    "            elif event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
+    "                return\n",
+    "\n",
+    "        new_window.fill(WHITE)\n",
+    "        pygame.display.update()\n",
+    "\n",
+    "# Main loop\n",
+    "running = True\n",
+    "while running:\n",
+    "    for event in pygame.event.get():\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            running = False\n",
+    "        elif event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "            if button_rect.collidepoint(event.pos):\n",
+    "                open_new_window()\n",
+    "\n",
+    "    main_window.fill(WHITE)\n",
+    "    pygame.draw.rect(main_window, BLUE, button_rect)\n",
+    "    pygame.display.flip()\n",
+    "\n",
+    "pygame.quit()\n"
    ]
   }
  ],
