--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -6,28 +6,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
      "ename": "SystemExit",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjaer\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -71,9 +55,11 @@
     "# Create a clock object to control the frame rate\n",
     "clock = pygame.time.Clock()\n",
     "fps = 60  # Set the desired frames per second\n",
-    "\n",
     "running = True\n",
+    "\n",
     "def dropdown_dynamics(root, dropdown, home_button, close_button):\n",
+    "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
+    "\n",
     "    hover = dropdown.collidepoint(mouse_x, mouse_y)\n",
     "    if hover and dropdown.height < 80 and home_button.y < 10:\n",
     "        dropdown.height += 5\n",
@@ -99,10 +85,6 @@
     "    close_text_1 = close_text.get_rect(center=close_button.center)\n",
     "    root.blit(close_text, close_text_1)\n",
     "\n",
-    "    if close_button.collidepoint(mouse_x,mouse_y) and event.type == pygame.KEYDOWN:\n",
-    "        running = False\n",
-    "    if home_button.collidepoint(mouse_x, mouse_y) and event.type == pygame.KEYDOWN:\n",
-    "        return\n",
     "\n",
     "def button_dynamics(button, name, subname_1, subname_2, subname_3):\n",
     "        hover = button.collidepoint(mouse_x, mouse_y)\n",
@@ -145,22 +127,41 @@
     "        return subbutton_1, subbutton_2, subbutton_3\n",
     "\n",
     "def Math_Game_Uno():\n",
+    "    global running\n",
     "    math_game_uno = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
     "    pygame.display.set_caption('Math uno')\n",
-    "    \n",
+    "    clock = pygame.time.Clock()\n",
+    "    fps = 60  # Set the desired frames per second\n",
+    "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
+    "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "        dropdown_dynamics(math_game_uno, dropdown, home_button, close_button)\n",
-    "        for event in pygame.event.get():\n",
-    "            \n",
-    "            if event.type == pygame.QUIT:\n",
-    "                pygame.quit()\n",
-    "                sys.exit()\n",
-    "            elif event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
-    "                return\n",
-    "\n",
     "        \n",
+    "        button_checker = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "        pygame.draw.rect(math_game_uno, black, button_checker,0, 30)\n",
+    "\n",
+    "        for event in pygame.event.get():\n",
+    "            # Makes the dropdown_dynamics function work\n",
+    "            if home_button.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                return\n",
+    "            if close_button.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                running = False\n",
+    "                return\n",
+    "            # From here you can fuck around ~~~~~~~~~~~\n",
+    "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
+    "                return\n",
+    "            if button_checker.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                \n",
+    "                text_math_check = font_2.render(\"Pressed\", True, white)\n",
+    "                text_math_check_2 = text_math_check.get_rect(center=button_checker.center)\n",
+    "                math_game_uno.blit(text_math_check, text_math_check_2)\n",
+    "        \n",
+    "        pygame.display.flip()\n",
     "        pygame.display.update()\n",
+    "        \n",
+    "        # Cap the frame rate to 60 fps\n",
+    "        clock.tick(fps)\n",
     "\n",
     "def Math_Game_Dos():\n",
     "    button_2 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
@@ -221,7 +222,6 @@
     "\n",
     "while running:\n",
     "    screen.fill(white)\n",
-    "\n",
     "    mouse_x, mouse_y = pygame.mouse.get_pos()\n",
     "\n",
     "    dropdown_dynamics(screen, dropdown, home_button, close_button)\n",
