--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,7 @@
    ],
    "source": [
     "import pygame\n",
+    "from mpmath import mp\n",
     "import random\n",
     "import sys\n",
     "\n",
@@ -158,17 +159,70 @@
     "                math_game_uno.blit(text_math_check, text_math_check_2)\n",
     "        \n",
     "        pygame.display.flip()\n",
+    "\n",
+    "        # Cap the frame rate to 60 fps\n",
+    "        clock.tick(fps)\n",
+    "\n",
+    "\n",
+    "def Math_Game_Dos():\n",
+    "    global running\n",
+    "    math_game_dos = pygame.display.set_mode((0, 0), pygame.FULLSCREEN)\n",
+    "    pygame.display.set_caption('Constant Runner')\n",
+    "    clock = pygame.time.Clock()\n",
+    "    fps = 60  # Set the desired frames per second\n",
+    "\n",
+    "    text = font_2.render(\"3.\", True, white)\n",
+    "    n=3\n",
+    "    \n",
+    "    numberkeys ={\n",
+    "            pygame.K_1: \"1\",\n",
+    "            pygame.K_2: \"2\",\n",
+    "            pygame.K_3: \"3\",\n",
+    "            pygame.K_4: \"4\",\n",
+    "            pygame.K_5: \"5\",\n",
+    "            pygame.K_6: \"6\",\n",
+    "            pygame.K_7: \"7\",\n",
+    "            pygame.K_8: \"8\",\n",
+    "            pygame.K_9: \"9\"\n",
+    "        }\n",
+    "\n",
+    "    while True:\n",
+    "        math_game_dos.fill(white)\n",
+    "        mouse_x, mouse_y = pygame.mouse.get_pos()\n",
+    "        dropdown_dynamics(math_game_dos, dropdown, home_button, close_button)\n",
+    "        \n",
+    "        button_checker = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
+    "        pygame.draw.rect(math_game_dos, black, button_checker,0, 30)\n",
+    "\n",
+    "        mp.dps = n + 2\n",
+    "        pi = str(mp.pi)\n",
+    "        pi_n = pi[n-1:n]\n",
+    "\n",
+    "\n",
+    "        for event in pygame.event.get():\n",
+    "            # Makes the dropdown_dynamics function work\n",
+    "            if home_button.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                return\n",
+    "            if close_button.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
+    "                running = False\n",
+    "                return\n",
+    "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
+    "                return\n",
+    "            # From here you can fuck around ~~~~~~~~~~~\n",
+    "            if event.type == pygame.KEYDOWN:\n",
+    "                if event.key in numberkeys:\n",
+    "                    if numberkeys[event.key] == pi_n:\n",
+    "                        text = font_2.render(str(pi[:n]), True, white)\n",
+    "                        n += 1\n",
+    "        \n",
+    "        text_math_2 = text.get_rect(center=button_checker.center)\n",
+    "        math_game_dos.blit(text, text_math_2)\n",
+    "        \n",
+    "        pygame.display.flip()\n",
     "        pygame.display.update()\n",
     "        \n",
     "        # Cap the frame rate to 60 fps\n",
     "        clock.tick(fps)\n",
-    "\n",
-    "def Math_Game_Dos():\n",
-    "    button_2 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
-    "    pygame.draw.rect(screen, black, button_2,0, 30)\n",
-    "    text_math_2 = font_2.render(\"Math Game 2\", True, white)\n",
-    "    text_math_1_2 = text_math_2.get_rect(center=button_2.center)\n",
-    "    screen.blit(text_math_2, text_math_1_2)\n",
     "\n",
     "def Math_Game_Tres():\n",
     "    button_3 = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
