--- a/sourcecode.ipynb
+++ b/sourcecode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +132,7 @@
     "    pygame.display.set_caption('Math uno')\n",
     "    clock = pygame.time.Clock()\n",
     "    fps = 60  # Set the desired frames per second\n",
+    "    button_pressed = False\n",
     "\n",
     "    while True:\n",
     "        math_game_uno.fill(white)\n",
@@ -140,6 +141,7 @@
     "        \n",
     "        button_checker = pygame.Rect(width/2-100, height/2-100, 200, 200)\n",
     "        pygame.draw.rect(math_game_uno, black, button_checker,0, 30)\n",
+    "        \n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            # Makes the dropdown_dynamics function work\n",
@@ -152,10 +154,15 @@
     "            if event.type == pygame.KEYDOWN and event.key == pygame.K_ESCAPE:\n",
     "                return\n",
     "            if button_checker.collidepoint(mouse_x,mouse_y) and event.type == pygame.MOUSEBUTTONDOWN:\n",
-    "                \n",
-    "                text_math_check = font_2.render(\"Pressed\", True, white)\n",
-    "                text_math_check_2 = text_math_check.get_rect(center=button_checker.center)\n",
-    "                math_game_uno.blit(text_math_check, text_math_check_2)\n",
+    "                if button_pressed:\n",
+    "                    button_pressed = False\n",
+    "                else:\n",
+    "                    button_pressed = True\n",
+    "\n",
+    "        if button_pressed:\n",
+    "            text_math_check = font_2.render(\"Pressed\", True, white)\n",
+    "            text_math_check_2 = text_math_check.get_rect(center=button_checker.center)\n",
+    "            math_game_uno.blit(text_math_check, text_math_check_2)\n",
     "        \n",
     "        pygame.display.flip()\n",
     "        pygame.display.update()\n",
@@ -325,7 +332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -339,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
